--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "three": "^0.135.0",
+    "web-ifc": "^0.0.36",
     "web-ifc-three": "^0.0.117",
     "web-ifc-viewer": "^1.0.213"
   }
