--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "rollup": "^3.15.0"
   },
   "dependencies": {
+    "dxf-writer": "^1.18.4",
     "three": "^0.135.0",
     "web-ifc": "^0.0.36",
     "web-ifc-three": "^0.0.117",
