--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rollup": "^3.15.0"
   },
   "dependencies": {
+    "dexie": "^3.2.3",
     "dxf-writer": "^1.18.4",
     "three": "^0.135.0",
     "web-ifc": "^0.0.36",
